Issue #17979: Fixed the re module in build with --disable-unicode.